crates/escalier_old_parser/src/snapshots/escalier_parser__tests__jsx-7.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"<Foo msg=\\\"hello\\\" bar={baz}></Foo>\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 33,
                    },
                },
                span: 0..33,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 33,
                            },
                        },
                        span: 0..33,
                        kind: JSXElement(
                            JSXElement {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 33,
                                    },
                                },
                                span: 0..33,
                                name: "Foo",
                                attrs: [
                                    JSXAttr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 5,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 16,
                                            },
                                        },
                                        span: 5..16,
                                        ident: Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 8,
                                                },
                                            },
                                            span: 5..8,
                                            name: "msg",
                                        },
                                        value: Lit(
                                            Str(
                                                Str {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 16,
                                                        },
                                                    },
                                                    span: 9..16,
                                                    value: "hello",
                                                },
                                            ),
                                        ),
                                    },
                                    JSXAttr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 17,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 26,
                                            },
                                        },
                                        span: 17..26,
                                        ident: Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 17,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 20,
                                                },
                                            },
                                            span: 17..20,
                                            name: "bar",
                                        },
                                        value: JSXExprContainer(
                                            JSXExprContainer {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 21,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 26,
                                                    },
                                                },
                                                span: 21..26,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 22,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 25,
                                                        },
                                                    },
                                                    span: 22..25,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 22,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 25,
                                                                },
                                                            },
                                                            span: 22..25,
                                                            name: "baz",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    },
                                ],
                                children: [],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
