crates/escalier_old_parser/src/snapshots/escalier_parser__tests__jsx.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"<Foo>Hello</Foo>\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 16,
                    },
                },
                span: 0..16,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 16,
                            },
                        },
                        span: 0..16,
                        kind: JSXElement(
                            JSXElement {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 16,
                                    },
                                },
                                span: 0..16,
                                name: "Foo",
                                attrs: [],
                                children: [
                                    JSXText(
                                        JSXText {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 10,
                                                },
                                            },
                                            span: 5..10,
                                            value: "Hello",
                                        },
                                    ),
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
